--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -7,7 +7,7 @@
 }
 
 .logo {
-    max-width: 150px;
+    max-width: 200px;
     margin-bottom: 1rem;
 }
 
@@ -52,7 +52,7 @@
     }
 
     .logo {
-        max-width: 200px;
+        max-width: 300px;
         margin-bottom: 0;
     }
 
